--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node-fetch": "^2.6.1",
     "rc-slider": "^9.7.1",
     "react": "^16.14.0",
+    "react-confirm": "^0.1.20",
     "react-dom": "^16.14.0",
     "react-draggable": "^4.4.3",
     "react-map-gl": "^5.2.9",
