--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-select": "^3.1.0",
     "react-sizeme": "^2.6.12",
     "recompose": "^0.30.0",
+    "shortid": "^2.2.16",
     "styled-components": "^5.2.0",
     "topojson-client": "^3.1.0",
     "uuid": "^8.3.1"
