--- a/src/components/Schedular/config.json
+++ b/src/components/Schedular/config.json
@@ -2,13 +2,14 @@
   "showLines": true,
   "zoomOnWheel": true,
   "zoomOptions": [
-    { "interval": 120, "name": "2h", "cellWidth": 102, "step": 15 },
-    { "interval": 60, "name": "1h", "cellWidth": 104, "step": 15 },
-    { "interval": 30, "name": "30m", "cellWidth": 106, "step": 15 },
-    { "interval": 15, "name": "15m", "cellWidth": 108, "step": 15 }
+    { "interval": 60, "name": "1h", "cellWidth": 74, "step": 15 },
+    { "interval": 30, "name": "30m", "cellWidth": 76, "step": 15 },
+    { "interval": 15, "name": "15m", "cellWidth": 78, "step": 15 }
   ],
   "timeGapBetweenZooms": 80,
-  "cellHeight": 72,
+  "cellHeight": 57,
   "totalMinutes": 1440,
-  "defaultHourFormat": 24
+  "defaultHourFormat": 24,
+  "defaultZoomOption": 0,
+  "spaceBetweenTimelines": 20
 }
