--- a/src/components/Schedular/config.json
+++ b/src/components/Schedular/config.json
@@ -10,6 +10,7 @@
   "cellHeight": 59,
   "tickHeight": 38,
   "timesHeight": 22,
+  "rangeLabelHeight": 24,
   "sidePanelWidth": 358,
   "totalMinutes": 1440,
   "defaultHourFormat": 24,
